Fix modal display bug on mobile

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -24,9 +24,9 @@
     background-color: white;
     box-shadow: 0 2px 16px 0 rgba(0, 0, 0, 0.16);
     opacity: 1;
-    max-width: calc(100vw - 56px);
-    padding-left: 28px;
-    padding-right: 28px;
+    // max-width: calc(100vw - 56px);
+    // padding-left: 28px;
+    // padding-right: 28px;
     padding-top: 64px;
     padding-bottom: 32px;
 
